--- a/src/components/Navbar/MobileNav/MobileNav.css
+++ b/src/components/Navbar/MobileNav/MobileNav.css
@@ -15,7 +15,7 @@
 .mobile-menu-container {
   width: 60vw;
   height: 100vh;
-  background-color: #474e68;
+  background-color: #dc0155;
   padding: 2rem;
 }
 
