--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,4 @@
 .nav-wrapper {
-  background-color: rgba(0, 0, 0, 0.1);
   padding: 0.5rem 0;
   position: sticky;
   top: 0;
@@ -8,7 +7,7 @@
 }
 
 .nav-content {
-  max-width: 1300px;
+  max-width: 1400px;
   display: flex;
   justify-content: space-between;
   padding: 0.6rem 0;
@@ -23,7 +22,7 @@
 .nav-content ul {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.1rem;
   list-style: none;
 }
 .nav-content li {
@@ -34,7 +33,7 @@
   text-decoration: none;
   font-size: 0.9rem;
   font-weight: 600;
-  color: #fff;
+
   position: relative;
   cursor: pointer;
 }
@@ -47,16 +46,14 @@
   justify-content: center;
   border: none;
   border-radius: 0.4rem;
-  color: #fff;
-  background-color: #474e68;
+
+  background-color: #dc0155;
   line-height: 0;
   cursor: pointer;
   transition: all 0.4s ease;
   display: none;
 }
 .menu-btn:hover {
-  color: white;
-  background: #474e68;
   border: 1px solid black;
 }
 
