added contact section

--- a/src/components/Navbar/MobileNav/MobileNav.css
+++ b/src/components/Navbar/MobileNav/MobileNav.css
@@ -15,7 +15,8 @@
 .mobile-menu-container {
   width: 60vw;
   height: 100vh;
-  background-color: #dc0155;
+  background-color: #172554;
+  color: white;
   padding: 2rem;
 }
 
