--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -47,7 +47,8 @@
   border: none;
   border-radius: 0.4rem;
 
-  background-color: #dc0155;
+  background-color: #172554;
+  color: white;
   line-height: 0;
   cursor: pointer;
   transition: all 0.4s ease;
