--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,111 +1,6 @@
-/* Navbar styles */
-.nav-wrapper {
-  padding: 0.5rem 0;
+.sticky-navbar {
   position: sticky;
-  z-index: 30;
-  height: 50px; /* Navbar height */
-}
-
-.nav-content {
-  max-width: 1400px;
-  display: flex;
-  justify-content: space-between;
-  padding: 0.6rem 0;
-  margin: 0 auto;
-  margin-top: 10px;
-  align-items: center;
-}
-
-.nav-content ul {
-  display: flex;
-  align-items: center;
-  gap: 0.1rem;
-  list-style: none;
-  transition: all 0.3s ease;
-}
-
-.nav-content li {
-  margin: 0 1.5rem;
-}
-
-.menu-item {
-  text-decoration: none;
-  font-size: 0.9rem;
-  font-weight: 600;
-  position: relative;
-  cursor: pointer;
-}
-
-.menu-btn {
-  width: 2.5rem;
-  height: 2.5rem;
-  font-size: 1.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  border-radius: 0.4rem;
-  color: #172554;
-  line-height: 0;
-  cursor: pointer;
-  transition: all 0.4s ease;
-  display: none;
-}
-
-/* Media query for mobile */
-@media (max-width: 769px) {
-  .menu-btn {
-    display: block;
-  }
-
-  .nav-content ul {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 50px;
-    left: 0;
-    right: 0;
-    background-color: white;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
-
-  .nav-content ul.show-menu {
-    display: flex;
-  }
-}
-
-/* Media query for tablets and smaller screens */
-@media (max-width: 1325px) {
-  .nav-wrapper {
-    padding: 0 2rem;
-  }
-}
-
-/* Banner section */
-.banner {
-  position: relative;
-  height: calc(100vh - 50px); /* Subtracting navbar height */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: url("your-banner-image-url") no-repeat center center/cover;
-}
-
-.banner-content {
-  position: absolute;
-  top: 50%; /* Center the content vertically */
-  transform: translateY(-50%);
-  text-align: center;
-  color: white;
-}
-
-.banner h1 {
-  font-size: 3rem;
-  font-weight: bold;
-  margin: 0;
-}
-
-.banner p {
-  font-size: 1.5rem;
-  margin-top: 1rem;
+  top: 0;
+  z-index: 1000;
+  background-color: white;
 }
