--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Satisfy&display=swap&family=Carattere");
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Satisfy&display=swap&family=Carattere&family=Leckerli+One&display=swap&family=Rubik:ital,wght@0,300..900;1,300..900&family=Raleway:ital,wght@0,100..900;1,100..900'");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
